--- a/package.json
+++ b/package.json
@@ -18,15 +18,9 @@
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/web3.js": "^1.95.1",
-    "@tabler/icons-react": "^3.11.0",
-    "@tanstack/react-query": "^5.51.11",
-    "@tanstack/react-query-next-experimental": "^5.51.11",
-    "daisyui": "^4.12.10",
-    "jotai": "^2.9.1",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
