--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,9 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
-, "pages/index.js"  ],
+    "**/*.tsx",
+    "pages/index.js"
+  ],
   "exclude": [
     "node_modules"
   ]
