--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,8 @@ edition = "2021"
 
 [dependencies]
 borsh = "1.5.3"
-solana-program = "2.1.0"
+solana-program = "1.18.7"
 thiserror = "2.0.3"
+
+[lib]
+crate-type = ["cdylib", "lib"]
