--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2021"
 borsh = "1.5.3"
 solana-program = "1.18.7"
 thiserror = "2.0.3"
+spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
+spl-associated-token-account = { version = "1.1.3", features = [
+    "no-entrypoint",
+] }
 
 [lib]
 crate-type = ["cdylib", "lib"]
