--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@coral-xyz/borsh": "^0.30.1",
     "@solana-developers/helpers": "^2.5.2",
     "@solana/web3.js": "^1.95.4"
   },
