--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@movie-review-dapp/source",
+  "name": "@solana-student-intro-frontend/source",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -9,7 +9,6 @@
   "private": true,
   "dependencies": {
     "@coral-xyz/borsh": "^0.30.1",
-    "@heroicons/react": "^2.1.5",
     "@solana-developers/preset-next": "3.0.1",
     "@solana/spl-token": "0.4.6",
     "@solana/wallet-adapter-base": "^0.9.23",
@@ -25,7 +24,7 @@
     "daisyui": "4.11.1",
     "encoding": "0.1.13",
     "jotai": "2.8.3",
-    "next": "^14.2.6",
+    "next": "14.0.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hot-toast": "2.4.1",
@@ -53,7 +52,7 @@
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "nx": "19.0.0",
-    "postcss": "^8.4.41",
+    "postcss": "8.4.21",
     "prettier": "^2.6.2",
     "tailwindcss": "3.2.7",
     "typescript": "~5.4.2"
