--- a/client/tsconfig.base.json
+++ b/client/tsconfig.base.json
@@ -9,14 +9,16 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "es2015",
-    "module": "esnext",
-    "lib": ["es2020", "dom"],
+    "module": "ES2022",
+    "lib": [
+      "es2020",
+    ],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./web/*"]
-    }
+    "baseUrl": "."
   },
-  "exclude": ["node_modules", "tmp"]
+  "exclude": [
+    "node_modules",
+    "tmp"
+  ]
 }
