--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,10 @@
   },
   "private": true,
   "dependencies": {
+    "@solana-developers/helpers": "^2.5.6",
     "@solana/spl-token": "^0.4.9",
-    "@solana/web3.js": "^1.95.5"
+    "@solana/web3.js": "^1.95.5",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "esbuild": "^0.24.0",
