--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -8,7 +8,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "target": "es2015",
+    "target": "ES2022",
     "module": "ES2022",
     "lib": [
       "es2020",
