--- a/client/package.json
+++ b/client/package.json
@@ -1,24 +1,29 @@
 {
-  "name": "@movie-review-dapp/source",
-  "version": "0.0.0",
-  "license": "MIT",
-  "module": "module",
-  "scripts": {
-    "start": "node ./index.js",
-    "build:dev": "npx esbuild ./create-token-mint.ts --bundle --outfile=index.js --watch --platform=node"
-  },
+  "name": "solana-intro-frontend",
+  "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
-    "@metaplex-foundation/mpl-token-metadata": "^2.13.0",
-    "@solana-developers/helpers": "^2.5.6",
-    "@solana/spl-token": "^0.4.9",
-    "@solana/web3.js": "^1.95.5",
-    "dotenv": "^16.4.5"
+    "@solana/spl-token": "^0.2.0",
+    "@solana/wallet-adapter-base": "^0.9.5",
+    "@solana/wallet-adapter-react": "^0.15.4",
+    "@solana/wallet-adapter-react-ui": "^0.9.6",
+    "@solana/wallet-adapter-wallets": "^0.15.5",
+    "@solana/web3.js": "^1.37.0",
+    "next": "12.1.2",
+    "react": "18.0.0",
+    "react-dom": "18.0.0"
   },
   "devDependencies": {
-    "esbuild": "^0.24.0",
-    "esrun": "^3.2.26",
-    "prettier": "^2.8.8",
-    "typescript": "~5.4.2"
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
+    "eslint": "8.12.0",
+    "eslint-config-next": "12.1.2",
+    "typescript": "^4.6.3"
   }
 }
