--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@solana-developers/helpers": "^2.5.6",
     "@solana/spl-token": "^0.2.0",
-    "@solana/web3.js": "^1.37.0"
+    "@solana/web3.js": "^1.37.0",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
