--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@metaplex-foundation/mpl-token-metadata": "^3.3.0",
+    "@metaplex-foundation/umi": "^0.9.2",
+    "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
+    "@metaplex-foundation/umi-storage-mock": "^0.9.2",
     "@solana-developers/helpers": "^2.5.6",
     "@solana/spl-token": "^0.2.0",
     "@solana/web3.js": "^1.37.0",
