--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@metaplex-foundation/umi": "^0.9.2",
     "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
     "@metaplex-foundation/umi-storage-mock": "^0.9.2",
+    "@metaplex-foundation/umi-uploader-irys": "^0.10.0-beta.0",
     "@solana-developers/helpers": "^2.5.6",
     "@solana/spl-token": "^0.2.0",
     "@solana/web3.js": "^1.37.0",
