--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,14 @@
-[package]
-name = "solana-course"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = [
+    "programs/*"
+]
+resolver = "2"
 
-[dependencies]
-borsh = "1.5.3"
-solana-program = "1.18.7"
-thiserror = "2.0.3"
-spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
-spl-associated-token-account = { version = "1.1.3", features = [
-    "no-entrypoint",
-] }
-
-[lib]
-crate-type = ["cdylib", "lib"]
+[profile.release]
+overflow-checks = true
+lto = "fat"
+codegen-units = 1
+[profile.release.build-override]
+opt-level = 3
+incremental = false
+codegen-units = 1
