--- a/anchor/Anchor.toml
+++ b/anchor/Anchor.toml
@@ -3,6 +3,7 @@
 [features]
 resolution = true
 skip-lint = false
+seeds = true
 
 [programs.devnet]
 anchor_counter = "AF5TqVfSoYxBTQdJtjrJbCiAuKPU5zNGUJwmSgBaqYFw"
