--- a/programs/movie-review/Cargo.toml
+++ b/programs/movie-review/Cargo.toml
@@ -1,20 +1,20 @@
 [package]
-name = "anchor_counter"
+name = "movie-review"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "anchor_counter"
+name = "movie_review"
 
 [features]
+default = []
+cpi = ["no-entrypoint"]
 no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
-cpi = ["no-entrypoint"]
-default = []
 idl-build = ["anchor-lang/idl-build"]
 
 [dependencies]
-anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
+anchor-lang = "0.30.1"
