--- a/Anchor.toml
+++ b/Anchor.toml
@@ -3,6 +3,7 @@
 [features]
 resolution = true
 skip-lint = false
+seeds = true
 
 [programs.localnet]
 movie_review = "27cmrJNLk5YvX4NW8tEit82UtY6L2XhGaRGmFqLuEUYj"
